tests/paczka1/fuzzy1/65840714.err
Error in line 4: Gbr3az&Lhz S821 44,1
Error in line 3: MvW7nhTi3aJ S821 72,9
Error in line 8: Gbr3az9Lhz S821 151,7
Error in line 14: QYVQOCYtx S821 83,8
Error in line 24: S748 S748 294,2
Error in line 28: S748 S729 22,1
Error in line 20: Gbr3az9Lhz S821 3,4
Error in line 34: Gbr3az9Lhz S729 16,3
Error in line 38: QYVQOCYtx S821 65,5
